fix vertical alignment on button appender on first button

--- a/.dev/assets/shared/css/style-editor.scss
+++ b/.dev/assets/shared/css/style-editor.scss
@@ -15,6 +15,10 @@
 	top: 0 !important;
 }
 
+.wp-block-button {
+	margin-bottom: var(--go--spacing--vertical) !important;
+}
+
 // Add padding to the editor.
 body {
 	padding-left: var(--go-block--padding--x);
